--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     }
   ],
   "require": {
-    "php": "^7",
+    "php": "^7.1|^8",
     "monolog/monolog": "^1",
-    "paragonie/quill": "^0|^1"
+    "paragonie/quill": "^0.6|^1"
   },
   "autoload": {
     "psr-4": {
@@ -20,7 +20,7 @@
     }
   },
   "require-dev": {
-    "vimeo/psalm": "^0|^1"
+    "vimeo/psalm": "^3|^4"
   },
   "scripts": {
     "static-analysis": "psalm"
