--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,5 +49,8 @@ jobs:
           ini-values: post_max_size=256M, max_execution_time=180
           tools: psalm
 
+      - name: Install dependencies
+        run: composer install
+
       - name: Static Analysis
         run: vendor/bin/psalm
